--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -168,4 +168,4 @@ From the Replay Messages menu, you will have 3 options.
 
 ## Sync data to your database
 
-You can find a guide on how to use webhooks to sync your data to your database [here](/docs/users/sync-data).
+You can find a guide on how to use webhooks to sync your data to your database [here](/docs/integrations/webhooks/sync-data).
