--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -17,6 +17,10 @@ The `useOrganizationList()` hook allows you to retrieve the memberships, invitat
 | `userInvitations` | `true` or an object with [`status: OrganizationInvitationStatus`](#organization-invitation-status) or any of the properties described in [Shared properties](#shared-properties). If set to `true`, all default properties will be used. |
 | `userSuggestions` | `true` or an object with [`status: OrganizationSuggestionsStatus \| OrganizationSuggestionStatus[]`](#organization-suggestion-status) or any of the properties described in [Shared properties](#shared-properties). If set to `true`, all default properties will be used. |
 
+<Callout type="warning">
+  By default, the `userMemberships`, `userInvitations`, and `userSuggestions` attributes are not populated. You must pass `true` or an object with the desired [properties](#shared-properties) to fetch and paginate the data.
+</Callout>
+
 ### Shared properties
 
 Parameters that are shared across the `invitations`, `membershipRequests`, `memberships`, and `domains` properties.
@@ -100,7 +104,8 @@ type OrganizationSuggestionStatus = "pending" | "accepted";
 To keep network usage to a minimum, developers are required to opt-in by specifying which resource they need to fetch and paginate through. So by default, the `userMemberships`, `userInvitations`, and `userSuggestions` attributes are not populated. You must pass `true` or an object with the desired [properties](#shared-properties) to fetch and paginate the data.
 
 ```jsx
-const { userMemberships } = useOrganizationList(); // userMemberships.data will never be populated.
+// userMemberships.data will never be populated
+const { userMemberships } = useOrganizationList();
 
 // Use default values to fetch userMemberships, such as initialPage = 1 and pageSize = 10
 const { userMemberships } = useOrganizationList({
