--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -18,6 +18,10 @@ The `useOrganization()` hook is used to retrieve attributes of the currently act
 | `memberships?` | `true` or an object with [`role: OrganizationCustomRoleKey[]`](#organization-custome-role-key) or any of the properties described in [Shared properties](#shared-properties). If set to `true`, all default properties will be used. |
 | `domains?` | `true` or an object with [`enrollmentMode: OrganizationEnrollmentMode`](#organization-enrollment-mode) or any of the properties described in [Shared properties](#shared-properties). If set to `true`, all default properties will be used. |
 
+<Callout type="warning">
+  By default, the `memberships`, `invitations`, `membershipRequests`, and `domains` attributes are not populated. You must pass `true` or an object with the desired [properties](#shared-properties) to fetch and paginate the data.
+</Callout>
+
 ### Shared properties
 
 Properties that are shared across the `invitations`, `membershipRequests`, `memberships`, and `domains` properties.
@@ -97,7 +101,8 @@ type OrganizationEnrollmentMode = "manual_invitation" | "automatic_invitation" |
 To keep network usage to a minimum, developers are required to opt-in by specifying which resource they need to fetch and paginate through. So by default, the `memberships`, `invitations`, `membershipRequests`, and `domains` attributes are not populated. You must pass `true` or an object with the desired [properties](#shared-properties) to fetch and paginate the data.
 
 ```jsx
-const { invitations } = useOrganization(); // invitations.data will never be populated.
+// invitations.data will never be populated.
+const { invitations } = useOrganization();
 
 // Use default values to fetch invitations, such as initialPage = 1 and pageSize = 10
 const { invitations } = useOrganization({
