--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Webhooks Overview
+title: Webhooks overview
 description: Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a POST request to a URL you specify when certain events happen in your Clerk account.
 ---
 
