reorganize webhook docs (#746)
Co-authored-by: Jeff Escalante <jescalan@users.noreply.github.com>

--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -1,13 +1,13 @@
 ---
-title: Webhooks
+title: Webhooks overview
 description: Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a POST request to a URL you specify when certain events happen in your Clerk account.
 ---
 
-# Webhooks
+# Webhooks overview
 
 Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a `POST` request to a URL you specify when certain events happen in your Clerk account.
 
-Clerk uses [Svix](https://svix.com/) to send our webhooks. 
+Clerk uses [Svix](https://svix.com/) to send our webhooks.
 
 You can find the Webhook signing secret when you click on the endpoint you created on the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page in the Clerk Dashboard.
 
@@ -136,7 +136,7 @@ const handler = req => {
 
 ### Retry
 
-Svix will use a set schedule and retry any webhooks that fail. To see the up-to-date schedule, check out the [Svix Retry Schedule](https://docs.svix.com/retries). 
+Svix will use a set schedule and retry any webhooks that fail. To see the up-to-date schedule, check out the [Svix Retry Schedule](https://docs.svix.com/retries).
 
 If Svix is attempting and failing to send a webhook, and that endpoint is removed or disabled from the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page of the Clerk Dashboard, then the attempts will also be disabled.
 
@@ -153,9 +153,9 @@ If a webhook message or multiple webhook messages fail to send, you have an opti
 
 #### Replay options
 
-From the Replay Messages menu, you will have 3 options. 
+From the Replay Messages menu, you will have 3 options.
 1. Resend the specific message you selected.
-2. Resend all failed messages since the first failed message in that date range. 
+2. Resend all failed messages since the first failed message in that date range.
 3. Resend all missing messages since the first failed message in that date range.
 
 <Images
@@ -168,4 +168,4 @@ From the Replay Messages menu, you will have 3 options.
 
 ## Sync data to your database
 
-You can find a guide on how to use webhooks to sync your data to your database [here](/docs/users/sync-data).
+You can find a guide on how to use webhooks to sync your data to your database [here](/docs/integrations/webhooks/sync-data).
