--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -1,11 +1,11 @@
 ---
-title: Requiring Authentication for Route protection | Next.js
+title: Requiring authentication for route protection | Next.js
 description: Learn how to protect the routes in your Next.js application that require authentication.
 ---
 
-# Requiring Authenication for Route protection 
+# Requiring authenication for route protection
 
-Whether you're in the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [Auth](/docs/references/nextjs/authentication-object) object that you can use to require authentication throughout your application. Below, we explain how to access and use the Auth object.
+Whether you're using the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [`auth()`](/docs/references/nextjs/authentication-object) object that you can use to access authentication details throughout your application. You can find details below on how to access and use the `auth()` object.
 
 If you want to learn about protecting routes based on [organization](/docs/organizations/overview) roles or permissions, see the [requiring authorization](/docs/references/nextjs/route-protection-requiring-authorization) guide.
 
@@ -13,8 +13,14 @@ If you want to learn about protecting routes based on [organization](/docs/organ
 
 ### Protect a layout or page
 
-You can use a `layout.tsx` file to protect the entire route, including all children. You can also protect a specific page using our auth() and its helper methods. The following examples would protect the route or page and require the user to be logged into the application.
+You can protect an entire route tree or an individual page by using Clerk helpers. There are two methods that you can use depending on your use case:
 
+- Using [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want to redirect unauthenticated users to the sign in route automatically
+- Using `auth().userId` if you want more control over what your app does based on user authentication status
+
+#### Use `auth().protect()`
+
+The following examples require a user to be signed in to view the content. If the user is not signed in, they will be redirected to the sign-in route.
 
 <CodeBlockTabs type="router" options={["app/dashboard/layout.tsx", "app/subscribe/page.tsx"]}>
 
@@ -25,9 +31,8 @@ export default async function Layout(
   { children }:
     { children: React.ReactNode }
 ) {
-  // This is an opinitonated auth check
   // If the user is not logged in they will be redirected to the sign-in route
-  // If the user is logged in they can view the route
+  // If the user is logged in they can view the content
   auth().protect()
 
   return <>{children}</>
@@ -35,13 +40,12 @@ export default async function Layout(
 ```
 
 
-```tsx filename="app/subscribe/page.tsx" 
+```tsx filename="app/subscribe/page.tsx"
 import { auth } from '@clerk/nextjs/server'
 
 export default function Page() {
 
   if (!auth().userId) {
-    // This is an opinitonated auth check
     // If the user is not logged in they will be redirected to the sign-in route
     // If the user is logged in they can view the route
     return auth().protect()
@@ -57,11 +61,13 @@ export default function Page() {
 ```
 </CodeBlockTabs>
 
-If `auth().protect()` is too opinionated, you can check for the `userID` and then perform whatever action you want based on whether a user is signed in and `userId` exists or the user is signed out and its `null`.
+#### Use `auth().userId`
+
+If you want to do something other than redirecting the user to the sign-in route, you can use `auth().userId` to check if the user is signed in and then perform the action you want based on the user's authentication status.
 
 <CodeBlockTabs type="router" options={["app/dashboard/layout.tsx", "app/subscribe/page.tsx"]}>
 
-```tsx filename="app/dashboard/layout.tsx" 
+```tsx filename="app/dashboard/layout.tsx"
 import { auth } from '@clerk/nextjs/server'
 import { SignInButton, SignOutButton } from '@clerk/nextjs'
 
@@ -69,13 +75,13 @@ export default async function Layout(
   { children }:
     { children: React.ReactNode }
 ) {
-  const { userId } = auth()
+  const { userId } = auth();
+
   if (!userId) {
     return (
       <>
         <header>
-          <div>Your Company Logo</div>
-          <div><SignInButton /></div>
+          <SignInButton />
         </header>
         <main>
           {children}
@@ -83,30 +89,28 @@ export default async function Layout(
       </>
     )
   }
+
   return (
     <>
       <header>
-        <div>Your Company Logo</div>
         <p>Your userId is {userId}</p>
-        <div><SignOutButton /></div>
+        <SignOutButton />
       </header>
       <main>
         {children}
       </main>
     </>
-
   )
 }
 ```
 
-
-```tsx filename="app/subscribe/page.tsx" 
+```tsx filename="app/subscribe/page.tsx"
 import { SignInButton } from "@clerk/nextjs"
 import { auth } from "@clerk/nextjs/server"
 
 export default function Page() {
 
-  const { userId } = auth()
+  const { userId } = auth();
 
   if (!userId) {
     return (
@@ -124,11 +128,14 @@ export default function Page() {
 ```
 </CodeBlockTabs>
 
-
 ### Protect your Route Handlers and Server Actions
 
-You can use `auth().protect()` or the `userId` your Route Handlers or Server actions, allowing you to protect queries and mutations.
+You can use protect queries and mutations in your Route Handlers or Server Actions in two ways:
 
+- `auth().protect()` if you want Clerk to automatically return an error
+- `auth().userId` if you want to customize the behavior or error message
+
+{/* TODO: (Roy) Check the error for auth.protect */}
 <CodeBlockTabs type="router" options={["auth().protect()", "auth().userId()"]}>
 
 ```tsx filename="/app/api/dashboard/route.ts"
@@ -139,7 +146,7 @@ export async function GET() {
   // If there is no signed in user, this will return an error
   auth().protect()
 
-  // Perform your Route Handler logic here
+  // Add your Route Handler logic here
 
   return Response.json({ userId: auth().userId })
 }
@@ -149,15 +156,15 @@ export async function GET() {
 import { auth } from "@clerk/nextjs/server";
 
 export async function GET() {
+  const { userId } = auth();
 
-  const { userId } = auth()
   if (!userId) {
     return new Response('Error: No signed in user', { status: 401 })
   }
 
-  // Perform your Route Handler logic here
+  // Add your Route Handler logic here
 
-  return Response.json({ userId: userId })
+  return Response.json({ userId })
 }
 ```
 </CodeBlockTabs>
@@ -166,17 +173,17 @@ export async function GET() {
 
 ### Protect a page
 
-You can protect a page using [`getServerSideProps`](https://nextjs.org/docs/pages/building-your-application/data-fetching/get-server-side-props) when using Server Side Rendering or with [`useAuth()`](/docs/references/react/use-auth) from the client eide. 
+You can protect a page using [`getServerSideProps()`](https://nextjs.org/docs/pages/building-your-application/data-fetching/get-server-side-props) when using Server Side Rendering, or with [`useAuth()`](/docs/references/react/use-auth) from the client side.
 
-<CodeBlockTabs type="router" options={["Server Side Rendered", "Client side"]}>
-
-```tsx filename="app/subscribe/page.tsx" 
+<Tabs type="router" items={["Server Side Rendered", "Client side"]}>
+<Tab>
+```tsx filename="pages/subscribe.tsx"
 import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
 import { GetServerSideProps, InferGetServerSidePropsType } from "next";
 
 export const getServerSideProps: GetServerSideProps = async (ctx) => {
-
   const { userId } = getAuth(ctx.req);
+
   if (!userId) {
     return {
       redirect: {
@@ -190,24 +197,28 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
 }
 
 export default function Page(props: InferGetServerSidePropsType<typeof getServerSideProps>) {
-
   return (
     <>
       <h1>Plan Subscription</h1>
       <p>Subscribe to one of our plans, and get access today!</p>
+      {*/ TODO: add a short example of how auth info is passed through props and user data can be accessed*/}
+      <p>{props.auth.userId}</p>
     </>
   );
 }
 ```
+</Tab>
 
+<Tab>
+Note that in the following example, all content is sent to the client. If JavaScript doesn't run, the user can see the content. If you need to protect sensitive content, use the "Server Side Rendered" example or [`clerkMiddleware()`](#protect-your-application-with-middleware) instead.
 
-```tsx filename="app/subscribe/page.tsx" 
+```tsx filename="pages/subscribe.tsx"
 import { useUser } from "@clerk/nextjs";
 import { useRouter } from "next/router";
 
 export default function Page() {
-  const { isLoaded, user } = useUser()
-  const router = useRouter()
+  const { isLoaded, user } = useUser();
+  const router = useRouter();
 
   if (!isLoaded) return null
 
@@ -223,31 +234,9 @@ export default function Page() {
   );
 }
 ```
-</CodeBlockTabs>
-
+</Tab>
+</Tabs>
 
 ## Protect your application with Middleware
 
-You an protect your routes in Middleware using [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware). `clerkMiddleware()` allows you select the routes you want to protect, and how you want to protect them. The example below is just protecting one route, but you can protect many routes.
-
-This is just a simple example of `clerkMiddleware()`. Please see the clerkMiddleware documentation for detailed information on the options and configurations available.
-
-
-```tsx filename="middleware.ts"
-import { clerkMiddleware } from '@clerk/nextjs/server';
-
-export default clerkMiddleware(
-  (auth, req) => {
-    if ( req.nextUrl.pathname.startsWith('/dashboard')) {
-      auth().protect();
-    }
-  }
-);
-
-export const config = {
-  matcher: ['/((?!.*\\..*|_next).*)', '/', '/(api|trpc)(.*)'],
-};
-```
-
-
-
+You can protect your routes using Middleware with `clerkMiddleware()`, which allows you to select the routes you want to protect. See the [reference documentation](/docs/references/nextjs/clerk-middleware) for more information.
