--- a/docs/deployments/clerk-cookies.mdx
+++ b/docs/deployments/clerk-cookies.mdx
@@ -16,8 +16,8 @@ These cookies:
 
 | Cookie Subgroup | Cookies | More Information |
 | --- | --- | --- |
-| .clerk.com | `__session`, `__client_uat`  | first party |
-| .clerk.com, .dashboard.clerk.com (cloudflare) | `_cfuvid`  | third party<br />[Cloudflare Cookies](https://developers.cloudflare.com/fundamentals/reference/policies-compliances/cloudflare-cookies/) |
+| .clerk.com | `__session`, `__client_uat`  | First party |
+| .clerk.com, .dashboard.clerk.com (cloudflare) | `_cfuvid`  | Third party<br />[Cloudflare Cookies](https://developers.cloudflare.com/fundamentals/reference/policies-compliances/cloudflare-cookies/) |
 
 
 <Callout level="warn">You should seek legal advice before using this information to craft your privacy policy.</Callout>
