--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -250,7 +250,7 @@ function closeSignIn(): void;
   import { dark } from "@clerk/themes";
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   clerk.openSignIn();
@@ -262,8 +262,8 @@ function closeSignIn(): void;
 
   ```html filename="index.html" {21}
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
+    // Get your Publishable Key and Frontend API URL from the Clerk Dashboard
+    const clerkPublishableKey = '{{pub_key}}';
     const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
