--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -249,7 +249,7 @@ function closeSignUp(): void;
   import { dark } from "@clerk/themes";
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   clerk.openSignUp();
@@ -261,8 +261,8 @@ function closeSignUp(): void;
 
   ```html filename="index.js" {21}
   <script>
-    // Get this URL and Publishable Key from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
+    // Get your Publishable Key and Frontend API URL from the Clerk Dashboard
+    const clerkPublishableKey = '{{pub_key}}';
     const frontendApiUrl = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
