code review w jeff and roy

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -58,95 +58,115 @@ Select your preferred method below to get started.
 
       ### Set environment keys
 
-      1. If you don't have an `.env.local` file in the root directory of your Next.js project, create one now.
-      2. Find your **Publishable Key** and **Frontend API URL**. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
-        - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
-        - Select your application, then select **🔑 API Keys** in the sidebar menu.
-        - In the **Quick Copy** section, copy your **Publishable Key**.
-        - Scroll down and select the **Advanced** dropdown to copy your **Frontend API URL**.
-      3. Add your keys to your `.env.local` file.
+      It's recommended to use environment variables to store your Clerk **Publishable Key** and **Frontend API URL**. A common way to use environment variables in a JavaScript project is putting the values in a `.env` file, then loading the values using the [`dotenv`](https://www.npmjs.com/package/dotenv) package. An example of how to set it up in this way is shown below:
 
-      The final result should look as follows:
+      1. Create a `.env` file at the root of your project, and add your Clerk publishable key.
 
-      <InjectKeys>
+        <InjectKeys>
 
-      ```sh filename=".env.local"
-      REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
-      CLERK_FRONTEND_API_URL=[your-domain].clerk.accounts.dev
+          ```sh filename=".env.local"
+          CLERK_PUBLISHABLE_KEY={{pub_key}}
+          ```
+
+          </InjectKeys>
+
+      2. Install the `dotenv` package using your package manager of choice:
+
+      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+        ```bash filename="terminal"
+        npm install dotenv
+        ```
+
+        ```bash filename="terminal"
+        yarn add dotenv
+        ```
+
+        ```bash filename="terminal"
+        pnpm add dotenv
+        ```
+      </CodeBlockTabs>
+
+      3. Use the `dotenv` package to load the environment variables from the `.env` file.
+
+      ```js filename="index.js"
+      require('dotenv').config();
+
+      console.log(process.env.CLERK_PUBLISHABLE_KEY);
       ```
 
-      </InjectKeys>
-
-      ### Setup the Clerk class
+      ### Initialize Clerk JS
 
       In your JavaScript file, import the `Clerk` class and instantiate it with your **Publishable key**. Then, call the `load()` method to initialize ClerkJS.
 
-      <InjectKeys>
-
-      ```js filename="index.ts"
+      ```js filename="index.js"
+      require('dotenv').config();
       import Clerk from '@clerk/clerk-js';
 
-      const clerkPublishableKey = `{{pub_key}}`;
-      const clerk = new Clerk(clerkPublishableKey);
+      const clerk = new Clerk(process.env.CLERK_PUBLISHABLE_KEY);
       await clerk.load({
         // Set load options here...
       });
       ```
 
-      </InjectKeys>
-
       <Callout type="info">
         Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
       </Callout>
 
-      ### Allow users to sign in or out
+      ### Allow users to sign in and out
 
       Clerk's [prebuilt components](/docs/components/overview) are the easiest way to add authentication and user management to your application. They come styled out of the box and are customizable to fit your application's design.
 
-      To get started,  you will use:
+      To get started, you will use:
 
       - [`<SignIn />`](/docs/references/javascript/clerk/sign-in): renders a user interface for signing in.
       - [`<UserButton />`](/docs/references/javascript/clerk/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
 
-      <InjectKeys>
+      <Tabs items={["index.js", "index.html"]}>
+        <Tab>
+          ```typescript filename="index.js"
+          require('dotenv').config();
+          import Clerk from '@clerk/clerk-js';
 
-        ```typescript filename="index.ts"
-        import Clerk from '@clerk/clerk-js';
+          const clerk = new Clerk(process.env.CLERK_PUBLISHABLE_KEY);
+          await clerk.load({
+            // Set load options here...
+          });
 
-        const clerkPublishableKey = `{{pub_key}}`;
-        const clerk = new Clerk(clerkPublishableKey);
-        await clerk.load({
-          // Set load options here...
-        });
+          if (clerk.user) {
+            document.getElementById("app").innerHTML = `
+              <div id="user-button"></div>
+            `;
 
-        if (clerk.user) {
-          // Selects for <div id="app"> and adds <div id="user-button">
-          document.querySelector<HTMLDivElement>("#app")!.innerHTML = `
-            <div
-              id="user-button"
-            ></div>
-          `;
+            const userButtonDiv =
+              document.getElementById("user-button");
 
-          const userButtonComponent =
-            document.querySelector<HTMLDivElement>("#user-button")!;
+            clerk.mountUserButton(userButtonDiv);
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
 
-          clerk.mountUserButton(userButtonComponent);
-        } else {
-          // Selects for <div id="app"> and adds <div id="sign-in">
-          document.querySelector<HTMLDivElement>("#app")!.innerHTML = `
-            <div
-              id="sign-in"
-            ></div>
-          `;
+            const signInDiv =
+              document.getElementById("sign-in")!;
 
-          const signInComponent =
-            document.querySelector<HTMLDivElement>("#sign-in")!;
+            clerk.mountSignIn(signInDiv);
+          }
+          ```
+          </Tab>
 
-          clerk.mountSignIn(signInComponent);
-        }
-        ```
+          <Tab>
+          ```html filename="index.html"
+          <!DOCTYPE html>
+          <html lang="en">
+            <body>
+              <div id="app"></div>
+              <script src="index.js"></script>
+            </body>
+          </html>
+          ```
+          </Tab>
 
-        </InjectKeys>
+        </Tabs>
     </Steps>
   </Tab>
 
@@ -155,7 +175,7 @@ Select your preferred method below to get started.
     <Steps>
       ### Add the ClerkJS package using a `<script>` tag
 
-      This `<script>` tag will load the ClerkJS package from our CDN and initialize it with your Clerk **Publishable Key** and **Frontend API URL**. It should *always* be placed before any other `<script>` tags that use ClerkJS.
+      This `<script>` tag will load the ClerkJS package from our CDN and initialize it with your Clerk **Publishable Key** and **Frontend API URL**. It should be placed before any other `<script>` tags that use ClerkJS.
 
       1. Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
       2. Select your application, then select **🔑 API Keys** in the sidebar menu.
@@ -171,17 +191,12 @@ Select your preferred method below to get started.
           async
           crossorigin="anonymous"
           data-clerk-publishable-key={{pub_key}}
-          onload="window.Clerk.load()"
-          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@4/dist/clerk.browser.js"
+          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
           type="text/javascript"
         ></script>
       ```
 
       </InjectKeys>
-
-      <Callout type="warning">
-        Don't forget, `<script>` tags should be placed right before the closing `</body>` tag in your HTML file.
-      </Callout>
 
       In the `<script>` tag, the `onload` attribute is used to call the `load()` method when the ClerkJS package is loaded. This is necessary to initialize ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
 
@@ -194,11 +209,9 @@ Select your preferred method below to get started.
       ```html filename="index.html"
       <script>
       window.addEventListener("load", async function () {
-        await window.Clerk.load();
+        await Clerk.load();
 
-        if (window.Clerk) {
-          console.log("ClerkJS is loaded");
-        }
+        console.log("ClerkJS is loaded");
       });
       </script>
       ```
@@ -217,34 +230,34 @@ Select your preferred method below to get started.
       ```html filename="index.html"
       <div id="app"></div>
 
-      <script>
-        // initialize ClerkJS (see step 1)
-      </script>
+      <script
+          async
+          crossorigin="anonymous"
+          data-clerk-publishable-key={{pub_key}}
+          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+          type="text/javascript"
+      ></script>
 
       <script>
       window.addEventListener("load", async function () {
-        await window.Clerk.load();
+        await Clerk.load();
 
-        if (window.Clerk.user) {
-          document.querySelector("#app").innerHTML = `
-            <div
-              id="user-button"
-            ></div>
+        if (Clerk.user) {
+          document.getElementById("app").innerHTML = `
+            <div id="user-button"></div>
           `;
 
-          const userButtonComponent = document.getElementById("user-button");
+          const userButtonDiv = document.getElementById("user-button");
 
-          window.Clerk.mountUserButton(userButtonComponent);
+          Clerk.mountUserButton(userButtonDiv);
         } else {
-          document.querySelector("#app").innerHTML = `
-            <div
-              id="sign-in"
-            ></div>
+          document.getElementById("app").innerHTML = `
+            <div id="sign-in"></div>
           `;
 
-          const signInComponent = document.querySelector("#sign-in");
+          const signInDiv = document.getElementById("sign-in");
 
-          window.Clerk.mountSignIn(signInComponent);
+          Clerk.mountSignIn(signInDiv);
         }
       });
       </script>
