--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -58,13 +58,13 @@ Select your preferred method below to get started.
 
       ### Set environment keys
 
-      It's recommended to use environment variables to store your Clerk **Publishable Key** and **Frontend API URL**. A common way to use environment variables in a JavaScript project is putting the values in a `.env` file, then loading the values using the [`dotenv`](https://www.npmjs.com/package/dotenv) package. An example of how to set it up in this way is shown below:
+      It's recommended to use environment variables to store your Clerk **Publishable Key**. A common way to use environment variables in a JavaScript project is putting the values in a `.env` file, then loading the values using the [`dotenv`](https://www.npmjs.com/package/dotenv) package. An example of how to set it up in this way is shown below:
 
-      1. Create a `.env` file at the root of your project, and add your Clerk publishable key.
+      1. Create a `.env` file at the root of your project, and add your Clerk **Publishable Key**. If you're signed into Clerk, the `.env` snippet below will contain your key. Otherwise, you can copy it from the Clerk Dashboard by navigating to the [**API Keys**](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
         <InjectKeys>
 
-          ```sh filename=".env.local"
+          ```sh filename=".env"
           CLERK_PUBLISHABLE_KEY={{pub_key}}
           ```
 
@@ -73,15 +73,15 @@ Select your preferred method below to get started.
       2. Install the `dotenv` package using your package manager of choice:
 
       <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-        ```bash filename="terminal"
+        ```env filename="terminal"
         npm install dotenv
         ```
 
-        ```bash filename="terminal"
+        ```env filename="terminal"
         yarn add dotenv
         ```
 
-        ```bash filename="terminal"
+        ```env filename="terminal"
         pnpm add dotenv
         ```
       </CodeBlockTabs>
@@ -94,9 +94,9 @@ Select your preferred method below to get started.
       console.log(process.env.CLERK_PUBLISHABLE_KEY);
       ```
 
-      ### Initialize Clerk JS
+      ### Initialize ClerkJS
 
-      In your JavaScript file, import the `Clerk` class and instantiate it with your **Publishable key**. Then, call the `load()` method to initialize ClerkJS.
+      In your JavaScript file, import the `Clerk` class and instantiate it with your **Publishable Key**. Then, call the `load()` method to initialize ClerkJS.
 
       ```js filename="index.js"
       require('dotenv').config();
@@ -208,11 +208,11 @@ Select your preferred method below to get started.
 
       ```html filename="index.html"
       <script>
-      window.addEventListener("load", async function () {
-        await Clerk.load();
+        window.addEventListener("load", async function () {
+          await Clerk.load();
 
-        console.log("ClerkJS is loaded");
-      });
+          console.log("ClerkJS is loaded");
+        });
       </script>
       ```
 
@@ -231,35 +231,35 @@ Select your preferred method below to get started.
       <div id="app"></div>
 
       <script
-          async
-          crossorigin="anonymous"
-          data-clerk-publishable-key={{pub_key}}
-          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-          type="text/javascript"
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key={{pub_key}}
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
       ></script>
 
       <script>
-      window.addEventListener("load", async function () {
-        await Clerk.load();
+        window.addEventListener("load", async function () {
+          await Clerk.load();
 
-        if (Clerk.user) {
-          document.getElementById("app").innerHTML = `
-            <div id="user-button"></div>
-          `;
+          if (Clerk.user) {
+            document.getElementById("app").innerHTML = `
+              <div id="user-button"></div>
+            `;
 
-          const userButtonDiv = document.getElementById("user-button");
+            const userButtonDiv = document.getElementById("user-button");
 
-          Clerk.mountUserButton(userButtonDiv);
-        } else {
-          document.getElementById("app").innerHTML = `
-            <div id="sign-in"></div>
-          `;
+            Clerk.mountUserButton(userButtonDiv);
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
 
-          const signInDiv = document.getElementById("sign-in");
+            const signInDiv = document.getElementById("sign-in");
 
-          Clerk.mountSignIn(signInDiv);
-        }
-      });
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
       </script>
       ```
 
