--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -242,7 +242,7 @@ Note that the first item in the navigation sidebar cannot be a `<UserProfile.Lin
 
 <Tabs type="usage" items={["Dedicated Page", "<UserButton />"]}>
   <Tab>
-    It's important to note that the first page in the list will always be rendered under the root path that you set with the `path` prop. It's `url` prop will be ignored, so you can pass any value you want. In the following example, the root path is set to `/user-profile`, so the `<CustomPage />` is rendered under `/user-profile`.
+    It's important to note that the first page in the list will always be rendered under the root path that you set with the `path` prop. It's `url` prop will be ignored, so you can pass any value you want. In the following example, `path` is set to `/user-profile`, so the `<CustomPage />` is rendered under the `/user-profile` path.
 
     ```tsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
     "use client";
