--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -5,7 +5,7 @@ description: Learn how to integrate Go into your Clerk application.
 
 # Go
 
-Clerk's [Go SDK](https://github.com/clerk/clerk-sdk-go) is a wrapper over the [Clerk Backend API](https://clerk.com/docs/reference/backend-api).
+Clerk's [Go SDK](https://github.com/clerk/clerk-sdk-go/tree/v2) is a wrapper over the [Clerk Backend API](/docs/reference/backend-api).
 
 ## Installation
 
@@ -27,7 +27,7 @@ go get -u github.com/clerk/clerk-sdk-go/v2
 
 For details on how to use this module, see the [Go Documentation](https://pkg.go.dev/github.com/clerk/clerk-sdk-go/v2).
 
-The library is organized using a resource-based structure similar to the [Clerk Backend API](https://clerk.com/docs/reference/backend-api).
+The library is organized using a resource-based structure similar to the [Clerk Backend API](/docs/reference/backend-api).
 Each API supports specific operations, like Create or List. While operations for each resource vary, a similar pattern is applied throughout the library.
 
 To execute API operations, you must configure the library with your Clerk API secret key. Depending on your use case,
@@ -114,4 +114,4 @@ for _, resource := range list.$Resource$s {
 }
 ```
 
-For more usage details, check out the [examples](/docs/references/go/other-examples) or the library's [README file](https://github.com/clerk/clerk-sdk-go).
+For more usage details, check out the [examples](/docs/references/go/other-examples) or the library's [README file](https://github.com/clerk/clerk-sdk-go/tree/v2).
